# Suffix_Array_Project

./: CMakeLists.txt  Explanations.txt  README.md
include/Functions/: CMakeLists.txt  functions.cpp  functions.h
src/: benchmark.cpp  main.cpp
test/: test.cpp
